--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 			<button onclick="keyPress('/')" class="key">/</button>
 			<button onclick="clearDisplay()" class="key">C</button>
 			<button onclick="backspace()" class="key">《</button>
-			<button onclick="result()" class="equal">=</button>
+			<button onclick="keyPress('.')" class="key">.</button>
+			<button onclick="result()" class="key">=</button>
 		</div>
 	</div>
 	<footer>
